--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.6",
+    "axios": "^1.8.1",
     "framer": "^2.4.1",
     "motion": "^12.4.7",
     "react": "^18.3.1",
